--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -125,6 +125,11 @@
   }
 }
 
+@layer components {
+  .button {
+    @apply !mt-4 shadow-md transition-colors bg-primary text-white hover:bg-card hover:text-black dark:bg-card dark:text-white dark:hover:bg-secondary  
+  }
+}
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
