--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,11 +35,11 @@
 
     /* --card: 240, 6%, 90%; */
     --card: 0, 0%, 100%;
-    --card-foreground:  0 0% 0%;
+    --card-foreground: 0 0% 0%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
     --primary: 214, 100%, 60%;
-    --primary-foreground:  0 0% 100%;
+    --primary-foreground: 0 0% 100%;
     /* --primary-foreground: 210 40% 98%; */
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 0, 0%, 0%;
@@ -88,9 +88,9 @@
       --chart-4: 280 65% 60%;
       --chart-5: 340 75% 55%; */
     /* --background: 0 0% 3.9%; */
-    --background:0, 0%, 7%;
+    --background: 0, 0%, 7%;
     --foreground: 0 0% 100%;
-    --card:0, 0%, 16%;
+    --card: 0, 0%, 16%;
     --card-foreground: 210 40% 98%;
     --popover: 0, 0%, 16%;
     --popover-foreground: 210 40% 98%;
@@ -104,7 +104,7 @@
     --accent-foreground: 210 40% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
-    --border:  0 0% 25%;
+    --border: 0 0% 25%;
     /* --input: 217.2 32.6% 17.5%; */
     --input: 0 0% 25%;
     --ring: 212.7 26.8% 83.9%;
@@ -127,10 +127,13 @@
 
 @layer components {
   .button {
-    @apply !mt-4 shadow-md transition-colors bg-primary text-white hover:bg-card hover:text-black dark:bg-card dark:text-white dark:hover:bg-secondary  
+    @apply !mt-4 shadow-md transition-colors bg-primary text-white hover:bg-card hover:text-black dark:bg-card dark:text-white dark:hover:bg-secondary;
   }
   .card-scroll {
-    @apply bg-card rounded-md mb-4 basis-1/2 overflow-y-auto hide-scrollbar
+    @apply bg-card rounded-md mb-4 basis-1/2 overflow-y-auto hide-scrollbar;
+  }
+  .icon {
+    @apply w-[30px] h-[30px] grid place-items-center rounded-md;
   }
 }
 .hide-scrollbar::-webkit-scrollbar {
@@ -141,7 +144,6 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-
 
 .dots-container {
   display: flex;
