--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,13 +32,14 @@
 
     --background: 0 0% 94%;
     --foreground: 0 0% 0%;
-
+    
     /* --card: 240, 6%, 90%; */
     --card: 0, 0%, 100%;
     --card-foreground: 0 0% 0%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 214, 100%, 60%;
+    /* --primary: 214, 100%, 60%; */
+    --primary: 225.9 70.7% 40.2%; 
     --primary-foreground: 0 0% 100%;
     /* --primary-foreground: 210 40% 98%; */
     --secondary: 210 40% 96.1%;
@@ -94,7 +95,10 @@
     --card-foreground: 210 40% 98%;
     --popover: 0, 0%, 16%;
     --popover-foreground: 210 40% 98%;
-    --primary: 210 40% 98%;
+    
+     
+    /* --primary: 210 40% 98%; */
+    --primary:225.9 70.7% 40.2%;
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 25%;
     --secondary-foreground: 0 0% 100%;
@@ -127,7 +131,7 @@
 
 @layer components {
   .button {
-    @apply !mt-4 w-full shadow-md transition-colors bg-primary text-white hover:bg-card hover:text-black dark:bg-card dark:text-white dark:hover:bg-secondary;
+    @apply !mt-4 w-full shadow-md transition-colors duration-200 bg-primary dark:text-white hover:bg-card ;
   }
   .card-scroll {
     @apply bg-card rounded-md mb-4 basis-1/2 overflow-y-auto hide-scrollbar;
